--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.1f8b8cea.js"></script>
-    <link rel="stylesheet" href="/assets/index.8495eee1.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>nebula_web</title><script defer="defer" src="js/chunk-vendors.40872e5e.js"></script><script defer="defer" src="js/app.16597bd7.js"></script><link href="css/chunk-vendors.90b97d17.css" rel="stylesheet"><link href="css/app.516f5042.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but nebula_web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
